tree-sitter-dml/grammar.js
    source_file: $ => seq(
      optional($.provisional_declaration),
      optional($.device_declaration),
      optional($.bitorder_declaration),
      repeat($._device_statement)
    ),

    device_declaration: $ => seq(
      'device',
      $.identifier,
      ';'
    ),

    bitorder_declaration: $ => seq(
      'bitorder',
      choice('be', 'le'),
      ';'
    ),

    // Device statements
    _device_statement: $ => choice(
      $.template_definition,
      $.object_declaration,
      $.parameter_declaration,
      $.method_declaration,
      $.is_template_statement,
      $.conditional_statement,
      $.error_statement,
      $.in_each_statement,
      $.header_block,
      $.footer_block,
      $.loggroup_declaration,
      $.constant_declaration,
      $.extern_declaration,
      $.typedef_declaration,
      $.import_statement,
      $.export_statement
    ),

    // Template definition
    template_definition: $ => seq(
      'template',
      $.identifier,
      optional(seq('is', $._template_list)),
      '{',
      repeat($._template_statement),
      '}'
    ),

    _template_list: $ => choice(
      $.identifier,
      seq('(', $.identifier_list, ')')
    ),

    _template_statement: $ => choice(
      $.object_declaration,
      $.parameter_declaration,
      $.method_declaration,
      $.shared_method_declaration,
      $.shared_hook_declaration,
      $.is_template_statement,
      $.conditional_statement
    ),

    // Object declarations
    register_declaration: $ => seq(
      'register',
      $.identifier,
      repeat($.array_spec),
      optional($.size_spec),
      optional($.offset_spec),
      optional(seq('is', $._template_list)),
      $._object_body
    ),

    field_declaration: $ => seq(
      'field',
      $.identifier,
      repeat($.array_spec),
      optional($.bitrange_spec),
      optional(seq('is', $._template_list)),
      $._object_body
    ),

    bank_declaration: $ => seq(
      'bank',
      $.identifier,
      repeat($.array_spec),
      optional(seq('is', $._template_list)),
      $._object_body
    ),

    size_spec: $ => seq('size', $.expression),

    offset_spec: $ => seq('@', $.expression),

    bitrange_spec: $ => seq(
      '@',
      choice(
        seq('[', $.expression, ']'),
        seq('[', $.expression, ':', $.expression, ']')
      )
    ),

    _object_body: $ => choice(
      seq(optional($.description), ';'),
      seq(optional($.description), '{', repeat($._object_statement), '}')
    ),

    parameter_declaration: $ => choice(
      seq('param', $.identifier, $._param_spec),
      seq('param', $.identifier, 'auto', ';'),
      seq('param', $.identifier, ':', $._param_spec),
      seq('param', $.identifier, ':', $.type_declaration, $._param_spec)
    ),

    _param_spec: $ => choice(
      ';',
      seq('=', $.expression, ';'),
      seq('default', $.expression, ';')
    ),

    // Method declarations
    method_declaration: $ => choice(
      seq(
        optional($._method_qualifiers),
        'method',
        $.identifier,
        $.method_params,
        optional('default'),
        $.compound_statement
      ),
      seq(
        'inline',
        'method',
        $.identifier,
        $.method_params,
        optional('default'),
        $.compound_statement
      )
    ),

    _method_qualifiers: $ => choice(
      'independent',
      seq('independent', 'startup'),
      seq('independent', 'startup', 'memoized')
    ),

    method_params: $ => seq(
      '(',
      optional($.c_declaration_list),
      ')',
      optional($.output_params),
      optional($.throws_spec)
    ),

    output_params: $ => seq(
      '->',
      '(',
      $.c_declaration_list,
      ')'
    ),

    _base_type: $ => choice(
      $.type_identifier,
      $.struct_type,
      $.layout_type,
      $.bitfields_type,
      $.typeof_expression,
      $.sequence_type,
      $.hook_type
    ),

    type_identifier: $ => choice(
      $.identifier,
      'char',
      'int',
      'short',
      'long',
      'float',
      'double',
      'signed',
      'unsigned',
      'void',
      'bool'
    ),

    c_declaration: $ => seq(
      optional('const'),
      $._base_type,
      optional($.declarator)
    ),

    declarator: $ => choice(
      $.identifier,
      seq($.declarator, '[', $.expression, ']'),
      seq($.declarator, '(', optional($._c_declaration_list_opt_ellipsis), ')'),
      seq('(', $.declarator, ')'),
      seq('*', optional('const'), $.declarator),
      seq('vect', $.declarator)
    ),

    c_declaration_list: $ => seq(
      $.c_declaration,
      repeat(seq(',', $.c_declaration))
    ),

    _c_declaration_list_opt_ellipsis: $ => choice(
      $.c_declaration_list,
      seq($.c_declaration_list, ',', '...'),
      '...'
    ),

    // Expressions
    expression: $ => choice(
      // Literals
      $.integer_literal,
      $.hex_literal,
      $.binary_literal,
      $.float_literal,
      $.char_literal,
      $.string_literal,
      $.true,
      $.false,
      $.undefined,

      // Identifiers
      $.identifier,
      $.this,
      $.default,

      // Unary operators
      prec(PREC.UNARY, seq('+', $.expression)),
      prec(PREC.UNARY, seq('-', $.expression)),
      prec(PREC.UNARY, seq('!', $.expression)),
      prec(PREC.UNARY, seq('~', $.expression)),
      prec(PREC.UNARY, seq('&', $.expression)),
      prec(PREC.UNARY, seq('*', $.expression)),
      prec(PREC.UNARY, seq('++', $.expression)),
      prec(PREC.UNARY, seq('--', $.expression)),
      prec(PREC.POSTFIX, seq($.expression, '++')),
      prec(PREC.POSTFIX, seq($.expression, '--')),
      prec(PREC.UNARY, seq('sizeof', $.expression)),
      prec(PREC.UNARY, seq('sizeoftype', $.type_declaration)),
      prec(PREC.UNARY, seq('defined', $.expression)),

      // Binary operators
      prec.left(PREC.MULTIPLICATIVE, seq($.expression, '*', $.expression)),
      prec.left(PREC.MULTIPLICATIVE, seq($.expression, '/', $.expression)),
      prec.left(PREC.MULTIPLICATIVE, seq($.expression, '%', $.expression)),
      prec.left(PREC.ADDITIVE, seq($.expression, '+', $.expression)),
      prec.left(PREC.ADDITIVE, seq($.expression, '-', $.expression)),
      prec.left(PREC.SHIFT, seq($.expression, '<<', $.expression)),
      prec.left(PREC.SHIFT, seq($.expression, '>>', $.expression)),
      prec.left(PREC.RELATIONAL, seq($.expression, '<', $.expression)),
      prec.left(PREC.RELATIONAL, seq($.expression, '>', $.expression)),
      prec.left(PREC.RELATIONAL, seq($.expression, '<=', $.expression)),
      prec.left(PREC.RELATIONAL, seq($.expression, '>=', $.expression)),
      prec.left(PREC.EQUALITY, seq($.expression, '==', $.expression)),
      prec.left(PREC.EQUALITY, seq($.expression, '!=', $.expression)),
      prec.left(PREC.BITWISE_AND, seq($.expression, '&', $.expression)),
      prec.left(PREC.BITWISE_XOR, seq($.expression, '^', $.expression)),
      prec.left(PREC.BITWISE_OR, seq($.expression, '|', $.expression)),
      prec.left(PREC.LOGICAL_AND, seq($.expression, '&&', $.expression)),
      prec.left(PREC.LOGICAL_OR, seq($.expression, '||', $.expression)),

      // Ternary
      prec.right(PREC.CONDITIONAL, seq($.expression, '?', $.expression, ':', $.expression)),
      prec.right(PREC.CONDITIONAL, seq($.expression, '#?', $.expression, '#:', $.expression)),

      // Member access
      prec(PREC.POSTFIX, seq($.expression, '.', $.identifier)),
      prec(PREC.POSTFIX, seq($.expression, '->', $.identifier)),

      // Array/bit access
      prec(PREC.POSTFIX, seq($.expression, '[', $.expression, ']')),
      prec(PREC.POSTFIX, seq($.expression, '[', $.expression, ',', $.identifier, ']')),
      prec(PREC.POSTFIX, seq($.expression, '[', $.expression, ':', $.expression, ']')),
      prec(PREC.POSTFIX, seq($.expression, '[', $.expression, ':', $.expression, ',', $.identifier, ']')),

      // Function call
      prec(PREC.POSTFIX, seq($.expression, '(', ')')),
      prec(PREC.POSTFIX, seq($.expression, '(', $.expression_list, ')')),
      prec(PREC.POSTFIX, seq($.expression, '(', $.expression_list, ',', ')')),

      // Type operations
      prec(PREC.CAST, seq('cast', '(', $.expression, ',', $.type_declaration, ')')),
      prec(PREC.UNARY, seq('new', $.type_declaration)),
      prec(PREC.UNARY, seq('new', $.type_declaration, '[', $.expression, ']')),

      // Array literal
      seq('[', $.expression_list, ']'),

      // Each expression
      seq('each', $.identifier, 'in', '(', $.expression, ')'),

      // Grouping
      seq('(', $.expression, ')')
    ),

    compound_statement: $ => seq(
      '{',
      repeat($.statement),
      '}'
    ),

    expression_statement: $ => seq($.expression, ';'),

    local_declaration: $ => seq(
      choice('local', 'session', 'saved'),
      choice(
        seq($.c_declaration, optional(seq('=', $.initializer))),
        seq('(', $.c_declaration_list, ')', optional(seq('=', $.initializer)))
      )
    ),

    assignment_statement: $ => choice(
      seq($.expression, '=', $.expression, ';'),
      seq($.expression, '=', $.initializer, ';'),
      seq($.tuple_literal, '=', $.initializer, ';'),
      seq($.expression, '+=', $.expression, ';'),
      seq($.expression, '-=', $.expression, ';'),
      seq($.expression, '*=', $.expression, ';'),
      seq($.expression, '/=', $.expression, ';'),
      seq($.expression, '%=', $.expression, ';'),
      seq($.expression, '&=', $.expression, ';'),
      seq($.expression, '|=', $.expression, ';'),
      seq($.expression, '^=', $.expression, ';'),
      seq($.expression, '<<=', $.expression, ';'),
      seq($.expression, '>>=', $.expression, ';')
    ),

    if_statement: $ => choice(
      seq('if', '(', $.expression, ')', $.statement),
      seq('if', '(', $.expression, ')', $.statement, 'else', $.statement),
      seq('#if', '(', $.expression, ')', $.statement),
      seq('#if', '(', $.expression, ')', $.statement, '#else', $.statement)
    ),

    while_statement: $ => seq(
      'while',
      '(',
      $.expression,
      ')',
      $.statement
    ),

    for_statement: $ => seq(
      'for',
      '(',
      optional($._for_init),
      ';',
      optional($.expression),
      ';',
      optional($._for_post),
      ')',
      $.statement
    ),

    _for_init: $ => choice(
      $.local_declaration,
      $.assignment_statement,
      $.expression
    ),

    _for_post: $ => seq(
      $._for_post_item,
      repeat(seq(',', $._for_post_item))
    ),

    switch_statement: $ => seq(
      'switch',
      '(',
      $.expression,
      ')',
      '{',
      repeat($._switch_case),
      '}'
    ),

    _switch_case: $ => choice(
      $.statement,
      seq('case', $.expression, ':'),
      seq('default', ':'),
      seq('#if', '(', $.expression, ')', '{', repeat($._switch_case), '}'),
      seq('#if', '(', $.expression, ')', '{', repeat($._switch_case), '}', '#else', '{', repeat($._switch_case), '}')
    ),

    try_catch_statement: $ => seq(
      'try',
      $.statement,
      'catch',
      $.statement
    ),

    log_statement: $ => choice(
      seq('log', $._log_kind, ',', $._log_level, ',', $.expression, ':', $.string_literal, repeat(seq(',', $.expression)), ';'),
      seq('log', $._log_kind, ',', $._log_level, ':', $.string_literal, repeat(seq(',', $.expression)), ';'),
      seq('log', $._log_kind, ':', $.string_literal, repeat(seq(',', $.expression)), ';')
    ),

    _log_kind: $ => choice(
      $.identifier,
      'error'
    ),

    _log_level: $ => choice(
      $.expression,
      seq($.expression, 'then', $.expression)
    ),

    assert_statement: $ => seq('assert', $.expression, ';'),

    after_statement: $ => choice(
      seq('after', $.expression, $.identifier, ':', $.expression, ';'),
      seq('after', $.expression, '->', '(', $.identifier_list, ')', ':', $.expression, ';'),
      seq('after', $.expression, '->', $.identifier, ':', $.expression, ';'),
      seq('after', $.expression, ':', $.expression, ';'),
      seq('after', ':', $.expression, ';')
    ),

    foreach_statement: $ => choice(
      seq('foreach', $.identifier, 'in', '(', $.expression, ')', $.statement),
      seq('#foreach', $.identifier, 'in', '(', $.expression, ')', $.statement)
    ),

    return_statement: $ => choice(
      seq('return', ';'),
      seq('return', $.initializer, ';')
    ),

    initializer: $ => choice(
      $._single_initializer,
      seq('(', $._single_initializer, ',', $._single_initializer_list, ')')
    ),

    _single_initializer: $ => choice(
      $.expression,
      seq('{', $._single_initializer_list, '}'),
      seq('{', $._single_initializer_list, ',', '}'),
      seq('{', $._designated_initializer_list, '}'),
      seq('{', $._designated_initializer_list, ',', '}'),
      seq('{', $._designated_initializer_list, ',', '...', '}')
    ),

    _single_initializer_list: $ => seq(
      $._single_initializer,
      repeat(seq(',', $._single_initializer))
    ),

    conditional_statement: $ => choice(
      seq('#if', '(', $.expression, ')', '{', repeat($._device_statement), '}'),
      seq('#if', '(', $.expression, ')', '{', repeat($._device_statement), '}', '#else', '{', repeat($._device_statement), '}'),
      seq('#if', '(', $.expression, ')', '{', repeat($._device_statement), '}', '#else', $.conditional_statement)
    ),

    import_statement: $ => seq(
      'import',
      $.string_literal,
      ';'
    ),

    constant_declaration: $ => seq(
      'constant',
      $.identifier,
      '=',
      $.expression,
      ';'
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    integer_literal: $ => /[0-9]+/,

    hex_literal: $ => /0[xX][0-9a-fA-F]+/,

    float_literal: $ => /[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/,

    string_literal: $ => /"([^"\\]|\\(.|\n))*"/,

    this: $ => 'this',
