tree-sitter-dml/test/corpus/statements.txt
==================
If statement
==================

method test() {
    if (x > 0) {
        return 1;
    }
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (if_statement
        (expression
          (expression
            (identifier))
          (expression
            (integer_literal)))
        (compound_statement
          (return_statement
            (initializer
              (expression
                (integer_literal)))))))))

==================
While loop
==================

method test() {
    while (i < 10) {
        i = i + 1;
    }
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (while_statement
        (expression
          (expression
            (identifier))
          (expression
            (integer_literal)))
        (compound_statement
          (assignment_statement
            (expression
              (identifier))
            (expression
              (expression
                (identifier))
              (expression
                (integer_literal)))))))))

==================
For loop
==================

method test() {
    for (local int i = 0; i < 10; i++) {
        log info: "count: %d", i;
    }
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (for_statement
        (local_declaration
          (c_declaration
            (type_identifier)
            (declarator
              (identifier)))
          (initializer
            (expression
              (integer_literal))))
        (expression
          (expression
            (identifier))
          (expression
            (integer_literal)))
        (expression
          (expression
            (identifier)))
        (compound_statement
          (log_statement
            (identifier)
            (string_literal)
            (expression
              (identifier))))))))

==================
Switch statement
==================

method test(int x) {
    switch (x) {
        case 0:
            return 1;
        case 1:
            return 2;
        default:
            return 0;
    }
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params
      (c_declaration_list
        (c_declaration
          (type_identifier)
          (declarator
            (identifier)))))
    (compound_statement
      (switch_statement
        (expression
          (identifier))
        (expression
          (integer_literal))
        (return_statement
          (initializer
            (expression
              (integer_literal))))
        (expression
          (integer_literal))
        (return_statement
          (initializer
            (expression
              (integer_literal))))
        (return_statement
          (initializer
            (expression
              (integer_literal))))))))

==================
Try-catch statement
==================

method test() {
    try {
        call_something();
    } catch {
        log error: "Failed";
    }
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (try_catch_statement
        (compound_statement
          (expression_statement
            (expression
              (expression
                (identifier)))))
        (compound_statement
          (log_statement
            (string_literal)))))))

==================
Foreach statement
==================

method test() {
    foreach reg in (this.regs) {
        reg.reset();
    }
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (foreach_statement
        (identifier)
        (expression
          (expression
            (this))
          (identifier))
        (compound_statement
          (expression_statement
            (expression
              (expression
                (identifier))
              (identifier))))))))

==================
Log statement
==================

method test() {
    log info, 2: "Test message: %d", value;
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (log_statement
        (identifier)
        (expression
          (integer_literal))
        (string_literal)
        (expression
          (identifier))))))

==================
Assert statement
==================

method test() {
    assert x > 0;
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (assert_statement
        (expression
          (expression
            (identifier))
          (expression
            (integer_literal)))))))

==================
After statement
==================

method test() {
    after 1.0 callback: do_something();
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (after_statement
        (expression
          (float_literal))
        (identifier)
        (expression
          (expression
            (identifier)))))))
